--- a/style.css
+++ b/style.css
@@ -135,3 +135,46 @@
 .border{
     border: 4px solid green;
 }
+.codingqs{
+    background-color: yellow;
+    height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    display: none;
+}
+.timeline {
+    height: 10%;
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+}
+.timeline span{
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
+.qarea{
+    background-color: white;
+    height: 60%;
+    width: 60%;
+    border-radius: 20px;
+}
+.btnn button{
+    background-color: black;
+    color: white;
+    padding: 1rem;
+}
+.qarea #question h1{
+    margin: 3rem 4rem 1rem;
+}
+.score{
+    height: 100vh;
+    display: block;
+    align-items: center;
+    justify-content: center;
+}
