--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
     color: white;
     text-decoration: none;
     border-radius: 5px;
-    
+    margin-left: 8rem;
 }
  .input{
     position: absolute;
